--- a/src/views/app/userView.twig
+++ b/src/views/app/userView.twig
@@ -59,5 +59,5 @@
 </main>
 </body>
 
-<script src="public/js/mainView.js" type="text/javascript"></script>
+<script src="public/js/userView.js" type="text/javascript"></script>
 </html>
