IN-PROCESS: Fonctionnalité CRUD de la page manage

--- a/src/views/app/mainView.twig
+++ b/src/views/app/mainView.twig
@@ -17,7 +17,7 @@
             </div>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-4 text-center col-md-offset-4">
+                    <div class="col-md-4 text-center col-md-offset-4" id="div_counter_zone">
                         <p id="counter_zone" class="text-center">{{ counterSet.counters|length }}</p>
                     </div>
                     <div class="col-md-4">
