--- a/src/views/base.twig
+++ b/src/views/base.twig
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{% block title %} {% endblock %}</title>
+    {% block title %}
+        <title>{{ title }}</title>
+    {% endblock %}
 
     {% block head %}
         <meta charset="UTF-8">
@@ -17,7 +19,7 @@
 
     {% block headerScript %}
         <script src="public/jquery/jquery-3.2.1.min.js" type="text/javascript"></script>
-        <script src="public/bootstrap/js/bootstrap.min.js"></script>
+        <script src="public/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     {% endblock %}
 </head>
 <body>
